--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-  "name": "Nhat-CamnangVisa",
-  "short_name": "CamnangVisa",
-  "start_url": "./index.html",
+  "name": "Nhat - Camnang Visa",
+  "short_name": "NhatVisa",
+  "description": "Cẩm nang hồ sơ visa — tra cứu theo quốc gia, chạy offline.",
+  "start_url": "v2.1.html",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "icons/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/svg+xml"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "icons/icon-512.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 }
