--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "theme_color": "#4f46e5",
   "icons": [
     {
-      "src": "icons/icon-192.svg",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "icons/icon-512.svg",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
