--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,15 @@
 {
-  "name": "Nhat-Camnang-Visa2.1",
-  "short_name": "NhatVisa2.1",
-  "description": "Cẩm nang hồ sơ visa — tra cứu theo quốc gia, chạy offline.",
+"name": "Nhật - CamnangVisa 2.1",
+  "short_name": "CamnangVisa",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
+  "orientation": "portrait",
+  "prefer_related_applications": false,
   "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
-    }
+    {"src": "icons/icon-192x192.png","sizes": "192x192","type": "image/png"},
+    {"src": "icons/icon-512x512.png","sizes": "512x512","type": "image/png"}
   ]
 }
